# python-mocking

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: on-push-commits.yaml
python_mocking/: __init__.py  main.py
tests/: __init__.py  test_http.py
