[tool.poetry]
name = "python-mocking"
version = "1.0.0"
description = ""
authors = ["Helmer <11061182+helmerdavila@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_mocking"}]

[tool.poetry.scripts]
python-mocking = "python_mocking:hello_from_docker"

[tool.poetry.dependencies]
python = "^3.10"
docker = "^6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
