[tool.poetry]
name = "python-mocking"
version = "1.0.0"
description = ""
authors = ["Helmer <11061182+helmerdavila@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_mocking"}]

[tool.poetry.scripts]
python-mocking = "python_mocking:hello_from_docker"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
    /(
        \.git
        | \.hg
        | \.mypy_cache
        | \.nox
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
    )/
'''