[tool.poetry]
name = "python-mocking"
version = "1.0.0"
description = ""
authors = ["Helmer <11061182+helmerdavila@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_mocking"}]

[tool.poetry.scripts]
http-real = "python_mocking:call_single_endpoint"
http-mock = "tests:call_single_endpoint_mock"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
    /(
        \.git
        | \.hg
        | \.mypy_cache
        | \.nox
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
    )/
'''